# blog-backend

./: .env  .gitignore  init_admin.py  main.py  pyproject.toml
app/api/v1/: auth.py  blogs.py  blogs2.py  router.py  user.py
app/core/: config.py  database.py  dependencies.py  lifespan.py  security.py
app/modules/auth/: model.py  repository.py  schema.py  service.py
app/modules/blogs/: model.py  repository.py  schema.py  service.py
app/modules/users/: model.py  repository.py  schema.py  service.py
app/utils/: logger.py
scripts/: generate_rsa_keys.py
